<resources>
    <string name="app_name">Labs20212-Gr04</string>
    <string name="personal_data_title">Información Personal</string>
    <string name="contact_data_title">Información de Contacto</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellidos</string>
    <string name="rbtn_male">Masculino</string>
    <string name="rbtn_female">Femenino</string>
    <string name="text_gender">Género:</string>
    <string name="btn_next">Siguiente</string>
    <string name="hint_birthdate">Fecha de nacimiento</string>
    <string name="hint_studies">Grado de escolaridad</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_email">Correo</string>
    <string name="hint_country">País</string>
    <string name="hint_city">Ciudad</string>
    <string name="hint_address">Dirección</string>
    <string-array name="scolarity_array">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universidad</item>
        <item>Otro</item>
    </string-array>
    <string-array name="latam_countries">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guayana Francesa</item>
        <item>Granada</item>
        <item>Guatemala</item>
        <item>Guayana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Paraguay</item>
        <item>Panamá</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>República Dominicana</item>
        <item>Surinam</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
    <string name="phone_validator">El campo teléfono no puede estar vacío</string>
    <string name="email_validator">El campo correo no puede estar vacío</string>
    <string name="country_validator">El campo país no puede estar vacío</string>
    <string name="logo_genero">Logo Genero</string>
</resources>
