<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_marginStart="16dp"
                                                   android:layout_marginEnd="16dp"
                                                   android:layout_marginTop="20dp"
                                                   android:id="@+id/constraintPersonalLayout">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:boxBackgroundColor="@color/icons"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
        ></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"
            app:boxBackgroundColor="@color/icons"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person_add"
            app:startIconTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tilName"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_people"
            android:id="@+id/genderImage"
            android:baselineAlignBottom="false"
            android:tintMode="multiply"
            app:tint="@color/primary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tilLastname"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"/>
    <TextView
            android:text="@string/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genderLabel"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/genderImage"
            app:layout_constraintTop_toTopOf="@+id/genderImage"
            app:layout_constraintBottom_toBottomOf="@+id/genderImage"
            android:textColor="@color/secondary_text" android:textSize="16sp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/genderLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:baselineAligned="true"
            app:layout_constraintTop_toBottomOf="@+id/tilLastname" android:layout_marginTop="4dp">
        <RadioButton
                android:text="@string/rbtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton2"
                android:textColor="@color/secondary_text"/>
        <RadioButton
                android:text="@string/rbtn_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButton"
                android:textColor="@color/secondary_text"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBirthdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthdate"
            app:boxBackgroundColor="@color/icons"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_calendar"
            app:startIconTint="@color/primary"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/scolarityTextInputLyt"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tilBirthdate" app:startIconDrawable="@drawable/ic_school"
            app:startIconTint="@color/primary">
        <AutoCompleteTextView
                android:id="@+id/scolarityDropdown"
                android:layout_height="wrap_content"
                android:hint="@string/hint_studies"
                android:layout_width="match_parent" android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNextPersonalData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            app:icon="@drawable/ic_next"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>

